# Lattice-Planner-in-Campus

./: README.md
frenet_optimal_trajectory/: CMakeLists.txt  frenet_optimal_trajectory.cpp
frenet_optimal_trajectory/curve1d/: cubic_polynomial_curve1d.cpp  cubic_polynomial_curve1d.h  curve1d.h  polynomial_curve1d.h  quartic_polynomial_curve1d.cpp  quartic_polynomial_curve1d.h  quintic_polynomial_curve1d.cpp  quintic_polynomial_curve1d.h
frenet_optimal_trajectory/include/: CarModel.h  Environment.h  Frenet_Path.h  Spline.h  basic_configuration.h  quartic_polynomial.h  quintic_polynomial.h
frenet_optimal_trajectory/src/: CarModel.cpp  Environment.cpp  Spline.cpp  quartic_polynomial.cpp  quintic_polynomial.cpp
routing/: CMakeLists.txt  demo.cpp
routing/include/: Astar_searcher.h  Basic_configuration.h  Grid_map_generator.h  Node.h  Reference_line.h  Spline.h  Visualization_node.h
routing/map/: 1.pcd  2.pcd  3.pcd  4.pcd
routing/src/: Astar_searcher.cpp  Grid_map_generator.cpp  Reference_line.cpp  Spline.cpp
